style: Adjusted mobile timeline  spacing and fixed font styling bug

--- a/client/src/components/MealsTimeline/MealsTimeline.scss
+++ b/client/src/components/MealsTimeline/MealsTimeline.scss
@@ -133,7 +133,7 @@
   display: flex;
   align-items: center;
   width: 100%;
-  height: 13rem;
+  height: 14rem;
   margin: 0.21rem 0;
   gap: 1rem;
   transition: all 0.5s ease;
@@ -234,13 +234,15 @@
 
 .mealsTimeline__meal-provider {
   font-family: 'Toronto Subway';
-  font-size: 1rem;
+  font-size: 0.9rem;
   display: flex;
+  margin-bottom: 0.3rem;
   // text-align: end;
 }
 
 .mealsTimeline__meal-address {
   display: flex;
+  font-size: 0.9rem;
 }
 
 .daily-timeline-text {
